glide (2002.04.10ds1-5) UNRELEASED; urgency=low

  * Debconf template translations:
    - Update Vietnamese. (Closes: #548039)
      Thanks to Clytie Siddall <clytie@riverland.net.au>.

 -- Guillem Jover <guillem@debian.org>  Thu, 24 Sep 2009 20:22:31 +0200

glide (2002.04.10ds1-4) unstable; urgency=low

  * Debconf template translations:
    - Update Basque. (Closes: #530596)
      Thanks to Piarres Beobide <pi+debian@beobide.net>.
    - Update Spanish. (Closes: #532290)
      Thanks to Francisco Javier Cuadrado <fcocuadrado@gmail.com>.
    - Update Swedish. (Closes: #528573)
      Thanks to Martin Bagge <brother@bsnet.se>.
    - Update Finnish. (Closes: #533223)
      Thanks to Esko Arajärvi <edu@iki.fi>.
  * Unify debconf template translation headers.
  * Now using Standards-Version 3.8.3 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Thu, 10 Sep 2009 15:09:49 +0200

glide (2002.04.10ds1-3) unstable; urgency=low

  * Use $(filter ...) instead of $(findstring ...) to extract space separated
    options from DEB_BUILD_OPTIONS in debian/rules.
  * Debconf templates and package descriptions reviewed by the
    debian-l10n-english team as part of the Smith review project.
    Thanks to Christian Perrier <bubulle@debian.org> for the coordination.
    (Closes: #524384)
  * Debconf template translations:
    - Update Czech. (Closes: #527376)
      Thanks to Michal Šimůnek <michal.simunek@gmail.com>.
    - Update French. (Closes: #527212)
      Thanks to Steve Petruzzello <dlist@bluewin.ch>.
    - Update Galician. (Closes: #527325)
      Thanks to Marce Villarino <mvillarino@gmail.com>.
    - Update German. (Closes: #527487)
      Thanks to Erik Schanze <schanzi_@gmx.de>.
    - Update Italian. (Closes: #526377)
      Thanks to Luca Monducci <luca.mo@tiscali.it>.
    - Update Japanese. (Closes: #525098)
      Thanks to Hideki Yamane <henrich@debian.or.jp>.
    - Update Portuguese. (Closes: #527324)
      Thanks to Américo Monteiro <a_monteiro@netcabo.pt>.