@@ -1,3 +1,0 @@
-This package uses quilt to manage all modifications to the upstream
-source. Please refer to /usr/share/doc/quilt/README.source for more
-information.
