@@ -3,6 +3,11 @@ glide (2002.04.10ds1-5) UNRELEASED; urgency=low
   * Debconf template translations:
     - Update Vietnamese. (Closes: #548039)
       Thanks to Clytie Siddall <clytie@riverland.net.au>.
+  * Switch to source format “3.0 (quilt)”:
+    - Remove quilt from Build-Depends.
+    - Remove quilt.make include from debian/rules.
+    - Remove patch and unpatch target calls from debian/rules.
+    - Remove now unneeded debian/README.source.
 
  -- Guillem Jover <guillem@debian.org>  Thu, 24 Sep 2009 20:22:31 +0200
 
